--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   "homepage": "https://github.com/matitalatina/word-counter#readme",
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "axios-mock-adapter": "^1.15.0",
     "jest": "^23.6.0",
     "parcel-bundler": "^1.10.3",
     "ts-jest": "^23.10.5",
+    "ts-mockito": "^2.3.1",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
